# Zenith

./: .gitignore  CMakeLists.txt  LICENSE  README.md
interpreter/: interpreter.cpp  lexer.cpp  lexer.h  parser.cpp  parser.h  token.h
interpreter/evaluator/: evaluator.cpp  evaluator.h
interpreter/lexer/: lexer.cpp  lexer.h
interpreter/parser/: evaluator.cpp  evaluator.h  parser.cpp  parser.h
